--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +14,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-graphql": "^0.12.0",
     "graphql": "^16.9.0",
-    "jsonwebtoken": "^9.0.2"
+    "graphql-http": "^1.22.1",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.4"
   }
 }
